--- a/src/screens/userLoggedIn/userLoggedIn.css
+++ b/src/screens/userLoggedIn/userLoggedIn.css
@@ -1,9 +1,20 @@
-.userLoggedIn .content {
-  display: flex;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 .userLoggedIn {
   height: 100vh;
   width: 100vw;
-  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+}
+
+.page-header {
+  height: 7.5vh;
+}
+.userLoggedIn .content {
+  height: 92.5vh;
+  display: flex;
 }
